--- a/src/styles/pages/others.scss
+++ b/src/styles/pages/others.scss
@@ -13,7 +13,7 @@
       flex: 1;
 
       .contain {
-        width: 96%;
+        width: 80%;
       }
     }
 
@@ -42,7 +42,6 @@
           input {
             padding: 10px;
             width: 300px;
-            height: 30px;
             border-radius: 18px;
             border: 1px solid #e0e0e0;
           }
@@ -195,6 +194,11 @@
   background-color: #fff;
   transition: background 0.4s ease;
   margin: 4px 2px;
+
+  span {
+    bottom: -3px;
+    position: relative;
+  }
 
   &:hover,
   &.active {
