--- a/src/styles/utils/_containers.scss
+++ b/src/styles/utils/_containers.scss
@@ -52,7 +52,8 @@
   .container {
     /* max-width: 1140px;
       */
-    max-width: 1260px;
+    // max-width: 1260px;
+    max-width: 1190px !important;
   }
 }
 
