--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -518,7 +518,7 @@
 
 .em__banner__2 {
   height: 150px;
-  background: #fff;
+  // background: #fff;
   .inner {
     h1 {
       line-height: 25px;
