--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -398,6 +398,28 @@ a {
   border-radius: 100px;
   background-color: #fff;
   box-shadow: 0px 0px 2px #ddd;
+
+  &:after {
+    display: none;
+  }
+}
+
+.ai-btn-prev,
+.ai-btn-next {
+  height: 36px !important;
+  width: 36px !important;
+  position: absolute;
+  top: -10px !important;
+}
+
+.ai-btn-next {
+  right: 0px !important;
+  left: auto !important;
+}
+
+.ai-btn-prev {
+  right: 50px !important;
+  left: auto !important;
 }
 
 .swiper-t {
