--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -94,7 +94,7 @@
 
       a {
         font-size: 14px;
-        color: #8b5326;
+        color: #986a47;
         cursor: pointer;
         position: relative;
 
@@ -373,7 +373,7 @@
       height: 520px;
       width: 500px;
       max-width: 100%;
-      background: #ffddc1;
+      background: #ffe3cd;
       position: absolute;
       top: 0px;
       z-index: 1;
@@ -492,7 +492,7 @@
         top: 26px;
         position: relative;
         left: -34px;
-        color: #8b5326;
+        color: #986a47;
       }
     }
   }
@@ -507,7 +507,7 @@
         color: $secondary-color;
         margin-top: 10px;
         span {
-          color: #8b5326;
+          color: #986a47;
           left: inherit;
           top: 0px;
         }
