--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -242,7 +242,7 @@ a {
     }
 
     span {
-      color: #ffae8a;
+      color: #986a47;
       font-size: 92px;
       top: 39px;
       left: 62px;
@@ -505,7 +505,7 @@ a {
       }
 
       span {
-        color: #ffae8a;
+        color: #986a47;
         font-size: 60px;
         top: 40px;
         right: -107px;
