--- a/src/lib/mailer/templates/backdrop.hbs
+++ b/src/lib/mailer/templates/backdrop.hbs
@@ -5,14 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Backdrop</title>
   </head>
-  <body>
-    <div
-      style="width:600px; margin:0 auto; padding:10px; border:1px solid #e7e7e7; border-radius:5px;"
+  <body style="background-color: #f6f6f6; margin: 0; padding: 0;">
+    <table
+      cellpadding="0"
+      cellspacing="0"
+      width="100%"
+      style="border-collapse: collapse; background-color: #f6f6f6;"
     >
-      <h2><strong>You have a new message!</strong></h2>
-      <p><strong>Name:<br /> </strong> {{full_name}} </p>
-      <p><strong>E-Mail: </strong><br /> {{email}} </p>
-      <p><strong>Message: </strong><br /> {{message}} </p>
-    </div>
+      <tr>
+        <td align="center" style="padding: 20px 0;">
+          <table
+            cellpadding="0"
+            cellspacing="0"
+            width="600"
+            style="border-collapse: collapse; border: 1px solid #e7e7e7; border-radius: 5px; background-color: #ffffff;"
+          >
+            <tr>
+              <td align="center" style="padding: 20px;">
+                <h2 style="margin: 0; color: #333333;"><strong>You have a new
+                    message!</strong></h2>
+              </td>
+            </tr>
+            <tr>
+              <td style="padding: 20px;">
+                <p style="margin: 0; font-weight: bold;">Name:</p>
+                <p style="margin: 0;">{{full_name}}</p>
+              </td>
+            </tr>
+            <tr>
+              <td style="padding: 20px;">
+                <p style="margin: 0; font-weight: bold;">E-Mail:</p>
+                <p style="margin: 0;">{{email}}</p>
+              </td>
+            </tr>
+            <tr>
+              <td style="padding: 20px;">
+                <p style="margin: 0; font-weight: bold;">Message:</p>
+                <p style="margin: 0;">{{message}}</p>
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+    </table>
   </body>
 </html>
