--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -932,6 +932,7 @@ input[type="radio"] {
   // inset: 0;
   translate: -50% -50%;
   left: 50%;
+  top: 50%;
   padding: 40px;
   margin: auto;
   display: flex;
