--- a/src/lib/mailer/templates/password.reset.hbs
+++ b/src/lib/mailer/templates/password.reset.hbs
@@ -256,7 +256,7 @@
                                     "
                                   >
                                     <p style="margin: 0;font-size: 16px;font-weight: 600; word-break: break-word;text-align:center">
-                                      <span>You've received a quote from {{company_name}}</span>
+                                      <span>Reset Password</span>
                                     </p>
                                     <div class="spacer_block block-1" style="
                                                                     height: 20px;
@@ -266,46 +266,17 @@
                                        
                                     </div>
                                     <p>
-                                      Dear {{name}},
+                                      Hi There,
                                     </p>
                                     <p
                                       style="margin: 0;font-size: 14px; word-break: break-word"
                                     >
-                                      <span>You have received a quote from {{company_name}}. Kindly visit your dashboard to review and accept the quote. If you have
-                                      any questions or need further assistance, feel free to contact our support team. We're here to ensure a smooth process
-                                      for you. Thank you for using our platform.</span>
+                                    A password reset event has been triggered. The password reset window is limited to two hours.
                                     </p>
-                                      <div class="spacer_block block-1" style="
-                                                                                                          height: 20px;
-                                                                                                          line-height: 20px;
-                                                                                                          font-size: 1px;
-                                                                                                        ">
-                                         
-                                      </div>
-
-                                      <p style="margin: 0;font-size: 16px;font-weight: 600; word-break: break-word;">
-                                        <span>Quote Overview</span>
-                                      </p>
-
-                                      <div class="spacer_block block-1" style="
-                                                                                                                                                height: 20px;
-                                                                                                                                                line-height: 20px;
-                                                                                                                                                font-size: 1px;
-                                                                                                                                              ">
-                                         
-                                      </div>
-
-                                      <table>
-                                        <tr>
-                                          <th style="white-space: nowrap;text-align:start">Amount:</th>
-                                          <td>${{quote.amount}}</td>
-                                        </tr>
-                                        <tr>
-                                          <th style="white-space: nowrap;text-align:start">Quote Description:</th>
-                                          <td>{{quote.description}}</td>
-                                        </tr>
-
-                                      </table>
+                                    <p>
+                                        To complete the password reset process, visit the following link:
+                                    </p>
+                                    <a href={{link}}>{{link}}</a>
                                   </div>
                                 </td>
                               </tr>
@@ -343,7 +314,7 @@
                                                           display: inline-block;
                                                           letter-spacing: 1px;
                                                         "><span style="word-break: break-word"><span data-mce-style=""
-                                            style="line-height: 28px">View Quote</span></span></span></a><!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
+                                            style="line-height: 28px">Reset password</span></span></span></a><!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
                                   </div>
                                 </td>
                               </tr>
