--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -473,7 +473,14 @@ a {
   }
 
   .bar {
-    display: block;
+    height: 40px;
+    width: 40px;
+    background: #213d61;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
   }
 
   .em__grid__4,
@@ -833,6 +840,26 @@ input[type="radio"] {
   }
 }
 
+.member-side-mobile {
+  background: #fff;
+  z-index: 999;
+  width: 80%;
+  padding: 0px 0px;
+  top: 50px;
+
+  ul {
+    li {
+      padding: 15px 10px;
+      transition: 0.2s;
+
+      &.active,
+      &:hover {
+        background: #f8f9fa;
+      }
+    }
+  }
+}
+
 .design-card {
   padding: 15px 10px;
   .display {
@@ -1063,6 +1090,7 @@ input[type="radio"] {
   position: sticky;
   top: 50px;
   width: 900px;
+  max-width: 100%;
   margin: auto;
   background: #fff;
   height: 500px;
@@ -1097,4 +1125,34 @@ input[type="radio"] {
       }
     }
   }
+}
+
+@media (max-width: 940px) {
+  .chat__container {
+    width: 100%;
+    height: 400px;
+
+    .chats {
+      width: 100%;
+      &.close {
+        display: none;
+      }
+    }
+    .chats_messages {
+      display: none;
+      padding: 0px;
+
+      &.open {
+        display: flex;
+      }
+    }
+  }
+
+  .hide-desk {
+    display: flex !important;
+  }
+}
+
+.hide-desk {
+  display: none !important;
 }
