--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1117,6 +1117,26 @@ input[type="radio"] {
     .body {
       flex: 1;
       overflow: auto;
+      padding: 10px 0px;
+
+      .border-v {
+        .rce-mbox {
+          border: 1px solid #eeab71;
+        }
+
+        .rce-mbox-right-notch {
+          filter: drop-shadow(2px 0 1px rgba(240, 0, 0, 0.2));
+        }
+      }
+
+      .border-u {
+        .rce-mbox {
+          border: 1px solid #2196f3;
+        }
+        .rce-mbox-right-notch {
+          filter: drop-shadow(2px 0 1px rgba(0, 0, 240, 0.2));
+        }
+      }
     }
 
     .foot {
