--- a/src/lib/mailer/templates/new.quote.hbs
+++ b/src/lib/mailer/templates/new.quote.hbs
@@ -92,6 +92,7 @@
                         color: #000;
                         width: 680px;
                         margin: 0 auto;
+                        max-width: 100% !important;
                       "
                       width="680"
                     >
@@ -140,7 +141,7 @@
                                   >
                                     <img
                                       alt="Yourlogo Light"
-                                      src='{{ host }}/assets/icons/logo.svg'
+                                      src='{{ host }}/assets/icons/logo.png'
                                       style="
                                         display: block;
                                         height: auto;
@@ -374,6 +375,7 @@
                                 color: #000;
                                 width: 680px;
                                 margin: 0 auto;
+                                max-width: 100% !important;
                               " width="680">
                   <tbody>
                     <tr>
@@ -408,7 +410,7 @@
                                             padding-left: 0px;
                                           ">
                               <div align="center" class="alignment" style="line-height: 10px">
-                                <img alt="Yourlogo Light" src='{{ host }}/assets/icons/logo2.svg' style="
+                                <img alt="Yourlogo Light" src='{{ host }}/assets/icons/logo2.png' style="
                                                 display: block;
                                                 height: auto;
                                                 border: 0;
@@ -515,6 +517,7 @@
                                 color: #000;
                                 width: 680px;
                                 margin: 0 auto;
+                                max-width: 100% !important;
                               " width="680">
                   <tbody>
                     <tr>
