--- a/src/lib/mailer/templates/quote_request.hbs
+++ b/src/lib/mailer/templates/quote_request.hbs
@@ -130,6 +130,7 @@
                         color: #000;
                         width: 680px;
                         margin: 0 auto;
+                        max-width: 100% !important;
                       " width="680">
                     <tbody>
                       <tr>
@@ -156,7 +157,7 @@
                                     width: 100%;
                                   ">
                                 <div align="center" class="alignment" style="line-height: 10px">
-                                  <img alt="Yourlogo Light" src='{{ host }}/assets/icons/logo.svg' style="
+                                  <img alt="Yourlogo Light" src='{{ host }}/assets/icons/logo.png' style="
                                         display: block;
                                         height: auto;
                                         border: 0;
@@ -282,6 +283,7 @@
                                 color: #000;
                                 width: 680px;
                                 margin: 0 auto;
+                                max-width: 100% !important;
                               " width="680">
                     <tbody>
                       <tr>
@@ -317,7 +319,7 @@
                                             padding-left: 0px;
                                           ">
                                 <div align="center" class="alignment" style="line-height: 10px">
-                                  <img alt="Yourlogo Light" src='{{ host }}/assets/icons/logo2.svg' style="
+                                  <img alt="Yourlogo Light" src='{{ host }}/assets/icons/logo2.png' style="
                                                 display: block;
                                                 height: auto;
                                                 border: 0;
@@ -425,6 +427,7 @@
                                 color: #000;
                                 width: 680px;
                                 margin: 0 auto;
+                                max-width: 100% !important;
                               " width="680">
                     <tbody>
                       <tr>
