--- a/src/lib/mailer/templates/test.hbs
+++ b/src/lib/mailer/templates/test.hbs
@@ -138,7 +138,7 @@
                                   >
                                     <img
                                       alt="Yourlogo Light"
-                                      src='{{ host }}/assets/icons/logo.svg'
+                                      src='{{ host }}/assets/icons/logo.png'
                                       style="
                                         display: block;
                                         height: auto;
@@ -929,6 +929,7 @@
                         color: #000;
                         width: 680px;
                         margin: 0 auto;
+                        max-width: 100% !important;
                       "
                       width="680"
                     >
@@ -989,7 +990,7 @@
                                   >
                                     <img
                                       alt="Yourlogo Light"
-                                      src='{{ host }}/assets/icons/logo.svg'
+                                      src='{{ host }}/assets/icons/logo.png'
                                       style="
                                         display: block;
                                         height: auto;
@@ -1170,6 +1171,7 @@
                         color: #000;
                         width: 680px;
                         margin: 0 auto;
+                        max-width: 100% !important;
                       "
                       width="680"
                     >
