--- a/src/styles/pages/others.scss
+++ b/src/styles/pages/others.scss
@@ -668,7 +668,7 @@
 }
 .ai__box {
   width: 640px;
-  height: 400px;
+  min-height: 400px;
   border: 10px solid $primary-color;
   max-width: 100%;
   margin: auto;
