--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -37,6 +37,7 @@
       bottom: 0px;
       right: 0px;
       position: absolute;
+      top: 0px;
     }
   }
 }
@@ -279,6 +280,23 @@
       border-radius: 100px;
       border: 1px solid #000;
       margin: auto;
+      position: relative;
+
+      img {
+        position: relative;
+        z-index: 1;
+      }
+
+      &:after {
+        content: "";
+        position: absolute;
+        height: 20px;
+        width: 20px;
+        top: 50px;
+        background-color: #eeab71;
+        z-index: 0;
+        border-radius: 50%;
+      }
     }
 
     .step__details {
