--- a/src/styles/pages/others.scss
+++ b/src/styles/pages/others.scss
@@ -722,7 +722,7 @@
 }
 
 .f__items {
-  background: $primary-color;
+  // background: $primary-color;
   padding: 10px;
   margin: 5px;
   border-radius: 18px 18px 18px 8px;
