--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -942,6 +942,11 @@ input[type="radio"] {
       }
     }
   }
+
+  &.vendor {
+    padding: 0px;
+    margin-bottom: -50px;
+  }
 }
 
 .em__vpcard {
