Saf modal mobile

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1028,6 +1028,12 @@ input[type="radio"] {
   &.small {
     width: 460px;
   }
+
+  @media (max-width: 640px) {
+    overflow-y: auto;
+    border-radius: 12px;
+    padding: 24px;
+  }
 }
 
 .m__overlay {
