--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -32,7 +32,7 @@
     height: 100%;
 
     img {
-      //   height: 100%;
+      height: 100%;
       width: 50%;
       bottom: 0px;
       right: 0px;
@@ -230,6 +230,7 @@
       height: 100%;
       width: 100%;
       border-radius: 5px;
+      object-fit: contain;
     }
   }
 
