--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -856,12 +856,13 @@ input[type="radio"] {
 }
 
 .member-side {
-  min-width: 220px;
+  min-width: 264px;
   ul {
-    li {
+    .menu-item {
       padding: 15px 10px;
       cursor: pointer;
       transition: 0.2s;
+      display: block;
 
       &.active,
       &:hover {
@@ -879,7 +880,7 @@ input[type="radio"] {
   top: 50px;
 
   ul {
-    li {
+    .menu-item {
       padding: 15px 10px;
       transition: 0.2s;
 
